# opsflow-ai

./: .env.example  .gitignore  ASSUMPTIONS.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: audit-repo.md  generate-readme.md  sql-doctor.md  write-tests.md
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: component_health.sql  event_summary.sql  ocr_health.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_alarm_events.sql  stg_events.sql  stg_ocr_events.sql
docs/: architecture.md
docs/adr/: 001-clean-room-synthetic-rebuild.md  002-deterministic-rca-not-llm.md  003-postgres-dbt-minimal-platform.md
reports/: sample_incident_report.md
src/opsflow/: __init__.py  __main__.py  cli.py  config.py
src/opsflow/data_gen/: generator.py  scenarios.py  schemas.py
src/opsflow/db/: connection.py  schema.sql
src/opsflow/detection/: anomaly_detector.py  metrics.py
src/opsflow/ingestion/: postgres_loader.py
src/opsflow/rca/: diagnosis_agent.py  report_writer.py  tools.py
tests/: conftest.py  test_anomaly_detector.py  test_data_generator.py  test_ingestion.py  test_rca_agent.py  test_scenarios.py
