[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opsflow-ai"
version = "0.1.0"
description = "OpsFlow AI — synthetic operational data platform: event generation, anomaly detection, deterministic RCA reporting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
postgres = [
    "psycopg[binary]>=3.1",
]
dbt = [
    "dbt-postgres>=1.8",
]

[project.scripts]
opsflow = "opsflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opsflow.db" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
